--- a/src/style/style.css
+++ b/src/style/style.css
@@ -24,6 +24,11 @@ body {
     background-color: var(--white);
 }
 
+main ::selection {
+    color: var(--white);
+    background-color: var(--accent);
+}
+
 main {
     min-height: 100vh;
     display: grid;
@@ -183,7 +188,7 @@ hr {
     font-family: "Nunito", sans-serif;
     font-weight: 700;
 
-    transition: background-color .2s ease-in-out, color .2s ease-in-out;
+    transition: background-color .2s ease-in-out, color .2s ease-in-out, border-color .2s ease-in-out;
     display: flex;
     align-items: center;
 }
@@ -194,17 +199,20 @@ hr {
 
 .list-button:hover,
 #list-sort:hover {
-    background-color: var(--white-grey);
+    border-color: var(--accent);
     cursor: pointer;
 }
 
 .list-button:active,
 #list-sort:active {
-    background-color: var(--grey);
+    background-color: var(--white-grey);
 }
 
 .sort-container {
     font-weight: 700;
+    display: flex;
+    gap: .5rem;
+    align-items: center;
 }
 
 #list-sort {
@@ -214,7 +222,7 @@ hr {
     background-color: var(--white);
     font-size: 1rem;
     font-weight: 700;
-    transition: background-color .2s ease-in-out;
+    transition: background-color .2s ease-in-out, border-color .2s ease-in-out;
 }
 
 #list-sort:hover {
