Style item buttons

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -5,9 +5,12 @@
     --black: #34495e;
     --black-darker: #2c3e50;
     --white: #ecf0f1;
-    --white-grey: #DCE1E3;
+    --white-grey: #dce1e3;
     --grey: #bdc3c7;
+    --green: #2ecc71;
     --accent: #2ecc71;
+    --red: #e74c3c;
+    --orange: #f39c12;
 }
 
 *,
@@ -22,11 +25,6 @@
 body {
     min-height: 100vh;
     background-color: var(--white);
-}
-
-main ::selection {
-    color: var(--white);
-    background-color: var(--accent);
 }
 
 main {
@@ -168,29 +166,33 @@ hr {
 
 #list-items-container {
     min-height: 3rem;
-    border: 1px solid var(--black);
+    border: 2px solid var(--black);
     border-radius: 1rem;
     margin-top: 4rem;
     width: 100%;
     padding: 1rem;
 }
 
+.list-button-transition {
+    transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
+}
+
 .list-actions {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 1rem;
 }
 
 .list-button {
-    padding: 0.25rem .5rem;
-    border: 1px solid var(--black);
-    border-radius: .5rem;
+    padding: 0.25rem 0.5rem;
+    border: 1px solid var(--grey);
+    border-radius: 0.5rem;
     font-size: 1rem;
     background-color: var(--white);
     font-family: "Nunito", sans-serif;
     font-weight: 700;
 
-    transition: background-color .2s ease-in-out, color .2s ease-in-out, border-color .2s ease-in-out;
     display: flex;
     align-items: center;
 }
@@ -213,20 +215,111 @@ hr {
 .sort-container {
     font-weight: 700;
     display: flex;
-    gap: .5rem;
+    gap: 0.5rem;
     align-items: center;
 }
 
 #list-sort {
-    padding: 0.25rem .5rem;
-    border: 1px solid var(--black);
-    border-radius: .5rem;
+    padding: 0.25rem 0.5rem;
+    border: 1px solid var(--grey);
+    border-radius: 0.5rem;
     background-color: var(--white);
     font-size: 1rem;
     font-weight: 700;
-    transition: background-color .2s ease-in-out, border-color .2s ease-in-out;
+    transition: border-color 0.2s ease-in-out;
 }
 
 #list-sort:hover {
     cursor: pointer;
+}
+
+#list-items {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 0.5rem;
+}
+
+.list-item {
+    width: 100%;
+    padding: 1rem;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+
+    border: 1px solid var(--grey);
+    border-radius: 0.5rem;
+}
+
+.item-content {
+    flex: 1 1 0;
+}
+
+.item-header {
+    display: inline;
+}
+
+.item-info {
+    display: flex;
+    gap: 0.5rem;
+    align-items: center;
+}
+
+.horizontal-separator {
+    height: 4px;
+    width: 4px;
+    background-color: var(--black-lighter);
+    border-radius: 999px;
+}
+
+.item-priority {
+    --priority-color: var(--grey);
+    padding: 2px 6px;
+    background-color: var(--priority-color);
+    color: var(--white);
+    border-radius: 4px;
+    font-weight: 700;
+}
+
+.item-priority.high-priority {
+    --priority-color: var(--red);
+}
+
+.medium-priority {
+    --priority-color: var(--orange);
+}
+
+.low-priority {
+    --priority-color: var(--green);
+}
+
+.item-actions {
+    display: flex;
+    gap: 0.5rem;
+}
+
+.item-button {
+    height: 3rem;
+    width: 3rem;
+    border-radius: 0.5rem;
+    border: 1px solid var(--black);
+    background-color: var(--white);
+}
+
+.item-button span {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 75%;
+    color: var(--black);
+}
+
+.item-button:hover {
+    border-color: var(--accent);
+    cursor: pointer;
+}
+
+.item-button:active {
+    background-color: var(--white-grey);
 }
