--- a/src/style/style.css
+++ b/src/style/style.css
@@ -4,7 +4,7 @@
     --black-lighter: #3f5870;
     --black: #34495e;
     --black-darker: #2c3e50;
-    --white: #ecf0f1;
+    --white: #f2f4f5;
     --white-grey: #dce1e3;
     --grey: #95a5a6;
     --grey-dark: #95a5a6;
@@ -45,6 +45,10 @@ h4 {
 
 hr {
     color: var(--accent);
+}
+
+.display-none {
+    display: none;
 }
 
 .sidebar {
@@ -171,6 +175,10 @@ hr {
     margin-top: 4rem;
     width: 100%;
     padding: 1rem;
+
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 .list-button-transition {
@@ -232,10 +240,11 @@ hr {
     display: grid;
     grid-template-columns: 1fr;
     gap: 0.5rem;
+    grid-auto-rows: 1fr;
 }
 
-.list-actions + div {
-    margin-top: 1rem;
+#list-items:empty {
+    display: none;
 }
 
 .list-item {
@@ -304,6 +313,7 @@ input[type="checkbox"]:checked + .item-content > .item-header::before {
     color: var(--white);
     border-radius: 4px;
     font-weight: 700;
+    text-transform: capitalize;
 }
 
 .item-priority.high-priority {
