--- a/src/style/style.css
+++ b/src/style/style.css
@@ -26,6 +26,7 @@
 body {
     min-height: 100vh;
     background-color: var(--white);
+    position: relative;
 }
 
 main {
@@ -49,6 +50,10 @@ hr {
 
 .display-none {
     display: none;
+}
+
+.hidden {
+    opacity: 0;
 }
 
 .sidebar {
@@ -208,13 +213,13 @@ hr {
 }
 
 .list-button:hover,
-#list-sort:hover {
+.combo-box:hover {
     border-color: var(--accent);
     cursor: pointer;
 }
 
 .list-button:active,
-#list-sort:active {
+.combo-box:active {
     background-color: var(--white-grey);
 }
 
@@ -225,7 +230,7 @@ hr {
     align-items: center;
 }
 
-#list-sort {
+.combo-box {
     padding: 0.25rem 0.5rem;
     border: 1px solid var(--grey);
     border-radius: 0.5rem;
