Small HTML and CSS changes

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -29,7 +29,7 @@ body {
     position: relative;
 }
 
-main {
+.main-wrapper {
     min-height: 100vh;
     display: grid;
     grid-template: 1fr / 300px 1fr;
@@ -231,7 +231,7 @@ hr {
 }
 
 .combo-box {
-    padding: 0.25rem 0.5rem;
+    padding: 0.5rem;
     border: 1px solid var(--grey);
     border-radius: 0.5rem;
     background-color: var(--white);
