--- a/src/style/form.css
+++ b/src/style/form.css
@@ -77,6 +77,7 @@ span[aria-label="required"] {
     border: 1px solid var(--grey);
     border-radius: 0.5rem;
     font-size: 1rem;
+    padding: .5rem;
     background-color: var(--white);
     font-family: "Nunito", sans-serif;
     transition: border-color .2s ease-in-out, background-color .2s ease-in-out;
