--- a/src/style/style.css
+++ b/src/style/style.css
@@ -353,6 +353,7 @@ hr {
     width: 100%;
     padding: 0.5rem 1rem;
     position: relative;
+    height: 100%;
 
     display: flex;
     justify-content: space-between;
