--- a/src/style/style.css
+++ b/src/style/style.css
@@ -13,6 +13,8 @@
     --accent-darker: #27ae60;
     --red: #e74c3c;
     --orange: #f39c12;
+
+    --sidebar-width: 300px;
 }
 
 *,
@@ -33,8 +35,9 @@ body {
 .main-wrapper {
     min-height: 100vh;
     display: grid;
-    grid-template: 1fr / 300px 1fr;
+    grid-template: 1fr / var(--sidebar-width) 1fr;
     grid-template-areas: "sidebar project-content";
+    position: relative;
 }
 
 h1,
@@ -62,7 +65,9 @@ hr {
 }
 
 .sidebar {
-    grid-area: sidebar;
+    height: 100vh;
+    width: var(--sidebar-width);
+    position: fixed;
     background-color: var(--black-darker);
     color: var(--white);
     border-radius: 0 1rem 1rem 0;
@@ -225,6 +230,7 @@ hr {
     display: flex;
     flex-direction: column;
     align-items: center;
+    grid-area: project-content;
 }
 
 .project-header {
