--- a/src/style/style.css
+++ b/src/style/style.css
@@ -92,7 +92,7 @@ hr {
     left: calc(100% + 1.25rem);
     transform: translate(-50%, -50%);
 
-    padding: .25rem;
+    padding: 0.25rem;
     background-color: var(--black-darker);
     border: none;
     border-radius: 0 999px 999px 0;
@@ -102,12 +102,16 @@ hr {
 
 .sidebar-collapse-button span {
     font-size: 3rem;
-    transition: transform .33s;
+    transition: transform 0.33s;
     transform: scaleX(-1);
 }
 
 .sidebar.collapsed .sidebar-collapse-button span {
     transform: scaleX(1);
+}
+
+.sidebar-collapse-button:hover {
+    cursor: pointer;
 }
 
 .sidebar * {
@@ -538,7 +542,6 @@ input[type="checkbox"]:checked + .task-content > .task-header::before {
 .accordion-visible {
     grid-template-rows: 1fr;
 }
-
 
 input[type="checkbox"] {
     all: unset;
