--- a/src/style/style.css
+++ b/src/style/style.css
@@ -286,7 +286,7 @@ hr {
     font-size: 2.5rem;
 }
 
-#greeting-subheader {
+#project-header {
     font-size: 1.5rem;
     overflow: auto;
 }
@@ -296,12 +296,12 @@ hr {
     font-size: inherit;
 }
 
-#greeting-name,
+#header-name,
 .project-name {
     color: var(--accent);
 }
 
-#greeting-name {
+#header-name {
     word-wrap: break-word;
 }
 
